# artisan-platform

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md
.github/workflows/: cd.yaml  ci.yaml  terraform-apply.yaml  terraform-plan.yaml
docs/: architecture.md  demo-script.md  runbook.md
docs/adr/: 001-why-kong-over-aws-apigw.md  002-why-nats-over-kafka.md  003-why-no-service-mesh.md  004-why-keycloak-over-cognito.md
infrastructure/kubernetes/argocd/: ai-service.yaml  app-of-apps.yaml  auth-service.yaml  gallery-service.yaml  notification-service.yaml  order-service.yaml
infrastructure/kubernetes/base/: namespaces.yaml
infrastructure/terraform/environments/dev/: main.tf  terraform.tfvars.example
infrastructure/terraform/environments/prod/: main.tf  terraform.tfvars.example
infrastructure/terraform/modules/ecr/: main.tf
infrastructure/terraform/modules/eks/: main.tf
infrastructure/terraform/modules/elasticache/: main.tf
infrastructure/terraform/modules/rds/: main.tf
infrastructure/terraform/modules/s3/: main.tf
infrastructure/terraform/modules/vpc/: main.tf
infrastructure/terraform/modules/vpc-endpoints/: main.tf
scripts/: bootstrap.sh  demo.sh  deploy.sh  seed-data.sh  teardown.sh
services/ai-service/: .env.example  pyproject.toml
services/auth-service/: .env.example  pyproject.toml
services/gallery-service/: .env.example  pyproject.toml
services/notification-service/: .env.example  pyproject.toml
services/order-service/: .env.example  pyproject.toml
shared/python-common/: pyproject.toml
shared/python-common/src/artisan_common/: __init__.py  auth.py  config.py  events.py  models.py  observability.py
